--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
     </main>
 
     <footer>
-        <p>With pride and admiration, <br> Your Classmates and Mentors 🎓 i am happy with this study</p>
+        <p>With pride and admiration, <br> Your Classmates and Mentors 🎓</p>
     </footer>
 </body>
 
