--- a/index.html
+++ b/index.html
@@ -1,233 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="te">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Topper of the Batch</title>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            margin: 0;
-            padding: 0;
-            background: linear-gradient(135deg, #ff9900, #ff6600, #ff33cc);
-            animation: bg-glow 6s infinite alternate;
-            color: white;
-            overflow-x: hidden;
-        }
-
-        @keyframes bg-glow {
-            0% {
-                background-position: 0% 50%;
-            }
-
-            100% {
-                background-position: 100% 50%;
-            }
-        }
-
-        header {
-            text-align: center;
-            padding: 40px;
-            background: linear-gradient(90deg, #ff6600, #ff9900, #ff33cc);
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
-            border-bottom-left-radius: 50px;
-            border-bottom-right-radius: 50px;
-            animation: header-glow 2s ease-in-out infinite;
-        }
-
-        @keyframes header-glow {
-            0% {
-                text-shadow: 0 0 20px #ff9900, 0 0 40px #ff6600, 0 0 60px #ff33cc;
-            }
-
-            100% {
-                text-shadow: 0 0 40px #ff33cc, 0 0 60px #ff6600, 0 0 80px #ff9900;
-            }
-        }
-
-        header h1 {
-            font-size: 3.5rem;
-            margin: 0;
-            text-transform: uppercase;
-            letter-spacing: 4px;
-            color: #007bff; /* Set text color to solid blue */
-            animation: header-text 2s ease-in-out infinite;
-        }
-
-        @keyframes header-text {
-            0% {
-                color: #007bff; /* Keep it blue */
-            }
-
-            100% {
-                color: #007bff; /* Keep it blue */
-            }
-        }
-
-        main {
-            text-align: center;
-            padding: 40px;
-            animation: fade-in 2s ease-in-out;
-        }
-
-        @keyframes fade-in {
-            from {
-                opacity: 0;
-            }
-
-            to {
-                opacity: 1;
-            }
-        }
-
-        .photo-container {
-            margin: 30px auto;
-            position: relative;
-            animation: rotate 5s infinite linear;
-        }
-
-        .photo-container img {
-            width: 250px;
-            height: 250px;
-            border-radius: 50%;
-            border: 5px solid white;
-            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.4);
-            transition: transform 0.3s ease;
-        }
-
-        .photo-container:hover img {
-            transform: scale(1.1) rotate(10deg);
-        }
-
-        .photo-container::after {
-            content: '🌟';
-            font-size: 3rem;
-            position: absolute;
-            top: -20px;
-            right: -20px;
-            animation: shine 1.5s infinite;
-        }
-
-        @keyframes shine {
-            0%, 100% {
-                transform: scale(1);
-                opacity: 1;
-            }
-
-            50% {
-                transform: scale(1.3);
-                opacity: 0.8;
-            }
-        }
-
-        .message {
-            font-size: 1.8rem;
-            background: rgba(0, 0, 0, 0.6);
-            padding: 30px;
-            margin: 20px auto;
-            border-radius: 15px;
-            width: 80%;
-            max-width: 700px;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
-            animation: slide-up 1s ease-out;
-            background: linear-gradient(135deg, #ff6600, #ff33cc);
-        }
-
-        @keyframes slide-up {
-            from {
-                transform: translateY(50px);
-                opacity: 0;
-            }
-
-            to {
-                transform: translateY(0);
-                opacity: 1;
-            }
-        }
-
-        footer {
-            text-align: center;
-            margin-top: 20px;
-            font-size: 1.3rem;
-            color: #ffcc00;
-        }
-
-        footer p {
-            animation: footer-glow 2s infinite alternate;
-        }
-
-        @keyframes footer-glow {
-            0% {
-                text-shadow: 0 0 10px #ffcc00, 0 0 20px #ff9900;
-            }
-
-            100% {
-                text-shadow: 0 0 20px #ff9900, 0 0 30px #ffcc00;
-            }
-        }
-
-        .stars {
-            position: fixed;
-            width: 100%;
-            height: 100%;
-            top: 0;
-            left: 0;
-            z-index: -1;
-            overflow: hidden;
-        }
-
-        .stars span {
-            position: absolute;
-            width: 10px;
-            height: 10px;
-            background: white;
-            border-radius: 50%;
-            animation: twinkle 3s infinite ease-in-out;
-        }
-
-        @keyframes twinkle {
-            0%, 100% {
-                opacity: 0.5;
-            }
-
-            50% {
-                opacity: 1;
-            }
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Telugu Message</title>
+  <style>
+    body {
+      font-family: 'Arial', sans-serif;
+      text-align: center;
+      margin-top: 20%;
+      background-color: #f9f9f9;
+      color: #333;
+    }
+    h1 {
+      font-size: 2.5rem;
+      color: #ff5722;
+    }
+  </style>
 </head>
-
 <body>
-    <div class="stars">
-        <span style="left: 10%; top: 20%; animation-duration: 3s;"></span>
-        <span style="left: 30%; top: 50%; animation-duration: 4s;"></span>
-        <span style="left: 60%; top: 80%; animation-duration: 5s;"></span>
-        <span style="left: 80%; top: 40%; animation-duration: 6s;"></span>
-        <span style="left: 90%; top: 60%; animation-duration: 7s;"></span>
-    </div>
-
-    <header>
-        <h1>Topper of the Batch</h1>
-    </header>
-
-    <main>
-        <div class="photo-container">
-            <img src="index.jpg" alt="Topper of the Batch">
-        </div>
-
-        <div class="message">
-            Congratulations to our <strong>Topper of the Batch</strong>! 🌟<br><br>
-            Your hard work, dedication, and perseverance have truly paid off! 🏅<br>
-            You are an inspiration to all, and we’re so proud of everything you’ve achieved. Keep shining and reaching for the stars! 🌠<br><br>
-            And we are thrilled to announce that you have secured the <strong>highest package of the university</strong> with an incredible offer of <strong>48.5 LPA</strong> at Tech Mahindra! 🎉<br><br>
-            Your future is shining brighter than ever before! ✨
-        </div>
-    </main>
-
-    <footer>
-        <p>With pride and admiration, <br> Your Classmates and Mentors 🎓Hello this kiran</p>
-    </footer>
+  <h1>గూడ ముసుకోని పోయి పోనుకో రా పూకా</h1>
 </body>
-
 </html>
