--- a/index.html
+++ b/index.html
@@ -3,22 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Telugu Message</title>
+  <title>Telugu Text</title>
   <style>
     body {
       font-family: 'Arial', sans-serif;
       text-align: center;
-      margin-top: 20%;
-      background-color: #f9f9f9;
-      color: #333;
+      margin-top: 50px;
     }
     h1 {
-      font-size: 2.5rem;
-      color: #ff5722;
+      font-size: 36px;
+      color: #333;
     }
   </style>
 </head>
 <body>
-  <h1>గూడ ముసుకోని పోయి పోనుకో రా పూకా</h1>
+  <h1>గుడ్డ ముసుకుని పోయి పొనుకో ర పుక</h1>
 </body>
 </html>
